# playwright-python-template

./: .gitignore  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini  settings.json
.github/workflows/: playwright.yml
example-package/: hello.py  panda.py
source/: date_validator.py
tests/: test_date_validator.py  test_playwright_example.py
