[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A Python project template using Poetry"
authors = [
    "Dorottya Kiss <dorey.kiss@gmail.com>"
]
repository = "https://github.com/DoreyKiss/python-template"

# README file(s) are used as the package description
readme = ["README.md", "LICENSE"]
# package-mode = false
license = "MIT"

packages = [
    { include = "example-package" }
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pytest = "~7.4.0"
pydantic = "~2.11.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

# Python-style entrypoints and scripts are easily expressed
[tool.poetry.scripts]
hello-script = "example-package.hello:main"
panda = "example-package.panda:main"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.flake8]
max-line-length = 88